# node

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.otter  Dockerfile.release  Justfile  README.md  analyze_log.py  audit_diff_summary.md  bench.nu  bench_and_kill.sh  deny.toml  docker-bake-profiling.hcl  docker-bake.hcl  otter.nu  switch_reth.sh  update-from-tempo.sh
.github/: dependabot.yml
.github/workflows/: build-docker.yml  build-multi-arch.yml  docker-otterevm.yml  docker-rebuild.yml  docker.yml  docs-specs.yml  e2e-test.yml  invariant-tests.yml  release-build.yml  release.yml  specs.yml  test.yml
.zed/: settings.json
contracts/bridge/: foundry.toml
crates/alloy/: CHANGELOG.md  Cargo.toml
crates/bridge-exex/: Cargo.toml  example-config.toml
crates/bridge-exex/src/: config.rs  consensus_client.rs  exex.rs  health.rs  lib.rs  metrics.rs  origin_watcher.rs  persistence.rs  proof.rs  signer.rs  tempo_client.rs  tempo_watcher.rs  tests.rs
crates/bridge-exex/src/tests/: integration.rs
crates/commonware-node/: Cargo.toml
crates/commonware-node-config/: Cargo.toml
crates/consensus/: Cargo.toml
crates/contracts/: CHANGELOG.md
crates/e2e/: Cargo.toml
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs  tip20_precompiles.rs
crates/native-bridge/: AGENTS.md
crates/node/: Cargo.toml
crates/order-book/: Cargo.toml
docs/: PATCHING.md  biome.json  commonware-reth-integration.md  network-reconfiguration.md  vercel.json  vocs.config.tsx  wagmi.config.ts
otterup/: README.md  install  otterup
scripts/: Justfile  auto-7702-delegation.sh  basic-transfer.sh  create-tip20-token.sh  decode_tx.rs  estimate-gas-77.sh  fee-amm-predeployed.sh  fee-amm.sh  nightly-multi-node-benchmark.sh  nightly-single-node-benchmark.sh
tips/: TIP-XXXX-tip20-prefix-protection.md  tip-1006.md  tip-1011.md  tip-1013.md  tip-1015.md  tip-XXXX.md  tip-xxxx.md  tip-yyyy.md  tip-zzzz.md
xtask/: Cargo.toml
(+399 files in other folders)
