[package]
name = "tempo-integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "TODO:"

# [lints]
# workspace = true

[dependencies]
tempo-precompiles.workspace = true
alloy = { workspace = true, default-features = false, features = ["network", "rpc", "rpc-types", "transports", "providers", "reqwest-rustls-tls"] }
eyre.workspace = true
rayon.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion.workspace = true
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }

[build-dependencies]
prost-build.workspace = true
protox.workspace = true
